# quantfolio

./: .env.example  .gitignore  README  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tree-generator.js
alembic/: env.py
alembic/versions/: 371f8414c52d_add_portfolios_and_transactions.py  9b225c7d705e_create_prices_table.py
backend/: Dockerfile
backend/app/: main.py  schemas.py
backend/app/core/: settings.py
backend/app/db/: crud_portfolios.py  crud_prices.py  crud_transactions.py  errors.py  models.py  session.py  test_conn.py
backend/app/services/: market_data.py  portfolios.py
backend/app/services/calculations/: metrics.py  signals.py
tests/: conftest.py  helpers.py  test_api.py  test_calculations.py  test_crud.py  test_market_data.py  test_metrics.py  test_prices.py  test_services.py  test_session.py  test_signals.py
tools/: smoke.ps1  smoke_latest.ps1
