[project]
name = "portfolio-manager"
version = "0.1.0"
description = ""
authors = [
    { name = "williamppmm", email = "williamppmm@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pandas (>=2.2)",
    "numpy (>=1.26)",
    "yfinance (>=0.2.65,<0.3.0)",
    "sqlalchemy[asyncpg] (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--maxfail=1 --disable-warnings --cov=backend/app --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
omit = [
    "backend/app/main.py",
    "backend/app/services/market_data.py",
    "backend/app/db/test_conn.py"
]
