[project]
name = "portfolio-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "williamppmm",email = "williamppmm@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pandas (>=2.2)",
    "numpy (>=1.26)",
    "yfinance (>=0.2.65,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
freezegun = "^1.5.5"

